--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="nav-links" id="navlinks">
                   <i class="fa fa-times" onclick="hidemenu()"></i>
                     <ul>
-                      <li><a href="School.html">Home</a></li>
+                      <li><a href="index.html">Home</a></li>
                       <li><a href="About.html">About</a></li>
                       <li><a href="massage.html">Management</a></li>
                       <li><a href="gallery.html">Gallery</a></li>
