--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,106 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Rihi Valley International Academy</title>
+  
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">  <link rel="stylesheet" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Handjet:wght@300&family=Poppins:ital,wght@0,300;0,500;0,600;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="School.css">
+    <link rel="stylesheet" href="Responsive.css">
+  
+</head>
+<body>
+  
+    <section class="sub-header">
+              <nav>
+                <a href="School.html"><img src="logo-2.png" alt=""></a>
+                <div class="nav-links" id="navlinks">
+                  <i class="fa fa-times" onclick="hidemenu()"></i>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="About.html">About</a></li>
+                        <li><a href="massage.html">Management</a></li>
+                        <li><a href="gallery.html">Gallery</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                </div>
+                <i class="fa fa-bars" onclick="showmenu()"></i>
+              </nav>
+              <h1>CONTACT US</h1>
+    </section>
 
+<section class="location">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3683.8986487159236!2d75.74635937448654!3d22.582893679484336!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3962f9941e299719%3A0x4a0c62c4c18133c2!2z4KSL4KS34KS_IOCkteCliOCksuClgCDgpIfgpILgpJ_gpLDgpKjgpYfgpLbgpKjgpLIg4KS14KS_4KSm4KWN4KSv4KS-4KSy4KSvIOCkruCljeCkueCli-CkteCljeCkl-Ckk-Ckgg!5e0!3m2!1shi!2sin!4v1699880579456!5m2!1shi!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+</section>
+
+
+
+<section class="contact-us">
+
+    <div class="contact-col">
+        <form action="">
+            <input type="text" placeholder="Enter Your Name" required>
+            <input type="text" placeholder="Enter Your Email address" required>
+            <input type="text" placeholder="Enter Your query" required>
+            <textarea rows="5" placeholder="Massage" required></textarea>
+            <button type="submit" class="Visit-button red-btn">Send Massage</button>
+        </form>
+    </div>
+    <div class="row">
+        <div class="About-col contact-col">
+            <div>
+                <i class="fa fa-home"></i>
+                <span>
+                    <h5>Mhow gaon,Indore,453441</h5>
+                </span>
+            </div>
+        </div>
+        <div class="About-col contact-col">
+            <div>
+                <i class="fa fa-phone"></i>
+                <span>
+                <h5>+91 xxxxx xxxxx</h5>
+                <p>Monday to Saturday, 10AM to 6PM</p>
+                </span>
+            </div>
+        </div>
+        <div class="About-col contact-col">
+            <i class="fa fa-envelope-o"></i>
+            <span>
+                <h5>rishivalleyinternational@gmail.com</h5>
+                <p>Email us for your query</p>
+            </span>
+        </div>
+    </div>
+</section>
+
+
+
+    <section class="footer">
+        <div class="icons">
+          <i class="fa fa-facebook"></i>
+          <i class="fa fa-twitter"></i>
+          <i class="fa fa-instagram"></i>
+          <i class="fa fa-linkedin"></i>
+        </div>
+        
+        
+        <p>Made with  <i class="fa fa-heart-o"></i>Ansh Sharma</p>
+      </section>
+             <!-- Javascript  -->
+            <script>
+              var navlinks = document.getElementById("navlinks");
+              function showmenu(){
+                navlinks.style.right = "0";
+              }
+              function hidemenu(){
+                navlinks.style.right = "-200px";
+              }
+            </script>
+  
+  </body>
+  </html>
