--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </div>
 
 
-<p>Made with  <i class="fa fa-heart-o"></i>Ansh Sharma</p>
+ <p>Made By  <i class="fa fa-heart-o"></i>Ansh Sharma</p>
 </section>
      <!-- Javascript  -->
     <script>
