--- a/massage.html
+++ b/massage.html
@@ -17,7 +17,7 @@
   
     <section class="sub-header">
               <nav>
-                <a href="index.html"><img src="logo-2.png" alt=""></a>
+               <p>Made By  <i class="fa fa-heart-o"></i>Ansh Sharma</p>
                 <div class="nav-links" id="navlinks">
                   <i class="fa fa-times" onclick="hidemenu()"></i>
                     <ul>
